changed from exec to processbuilder